# homelab-controller

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: frame.rs  lib.rs  protocol.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
src/: lib.rs  main.rs
