[workspace]
resolver = "2"
members = ["crates/common", "crates/server", "crates/client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/hackerstark/homelab-controller"

[workspace.dependencies]
common = { path = "crates/common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
